--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "projekt1",
   "version": "1.0.0",
   "description": "",
-  
   "author": "Jonas Ståleker",
   "license": "ISC",
   "source": "src/index.html",
@@ -11,6 +10,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "sharp": "^0.31.3"
   }
 }
