--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jonas Ståleker",
   "license": "ISC",
   "source": "src/index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
@@ -13,4 +14,5 @@
     "parcel": "^2.11.0",
     "sharp": "^0.31.3"
   }
+  
 }
